# demoji

./: Cargo.toml  flake.nix
src/: main.rs  symbols.rs
