[package]
name = "demoji"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
fork = "0.1.20"
arboard = { version = "3.2.0", features = ["wayland-data-control"] }

[dependencies.emoji]
version = "0.2.1"

[features]
default =    [ "en" ]
af =         [ "emoji/af" ]
am =         [ "emoji/am" ]
ar =         [ "emoji/ar" ]
ar_SA =      [ "emoji/ar_SA" ]
as =         [ "emoji/as" ]
ast =        [ "emoji/ast" ]
az =         [ "emoji/az" ]
be =         [ "emoji/be" ]
bg =         [ "emoji/bg" ]
bn =         [ "emoji/bn" ]
br =         [ "emoji/br" ]
bs =         [ "emoji/bs" ]
ca =         [ "emoji/ca" ]
ccp =        [ "emoji/ccp" ]
ceb =        [ "emoji/ceb" ]
chr =        [ "emoji/chr" ]
ckb =        [ "emoji/ckb" ]
cs =         [ "emoji/cs" ]
cy =         [ "emoji/cy" ]
da =         [ "emoji/da" ]
de =         [ "emoji/de" ]
de_CH =      [ "emoji/de_CH" ]
doi =        [ "emoji/doi" ]
el =         [ "emoji/el" ]
en =         [ "emoji/en" ]
en_001 =     [ "emoji/en_001" ]
en_AU =      [ "emoji/en_AU" ]
en_CA =      [ "emoji/en_CA" ]
en_GB =      [ "emoji/en_GB" ]
en_IN =      [ "emoji/en_IN" ]
es =         [ "emoji/es" ]
es_419 =     [ "emoji/es_419" ]
es_MX =      [ "emoji/es_MX" ]
es_US =      [ "emoji/es_US" ]
et =         [ "emoji/et" ]
eu =         [ "emoji/eu" ]
fa =         [ "emoji/fa" ]
fi =         [ "emoji/fi" ]
fil =        [ "emoji/fil" ]
fo =         [ "emoji/fo" ]
fr =         [ "emoji/fr" ]
fr_CA =      [ "emoji/fr_CA" ]
ga =         [ "emoji/ga" ]
gd =         [ "emoji/gd" ]
gl =         [ "emoji/gl" ]
gu =         [ "emoji/gu" ]
ha =         [ "emoji/ha" ]
ha_NE =      [ "emoji/ha_NE" ]
he =         [ "emoji/he" ]
hi =         [ "emoji/hi" ]
hr =         [ "emoji/hr" ]
hu =         [ "emoji/hu" ]
hy =         [ "emoji/hy" ]
ia =         [ "emoji/ia" ]
id =         [ "emoji/id" ]
ig =         [ "emoji/ig" ]
is =         [ "emoji/is" ]
it =         [ "emoji/it" ]
ja =         [ "emoji/ja" ]
jv =         [ "emoji/jv" ]
ka =         [ "emoji/ka" ]
kab =        [ "emoji/kab" ]
kk =         [ "emoji/kk" ]
kl =         [ "emoji/kl" ]
km =         [ "emoji/km" ]
kn =         [ "emoji/kn" ]
ko =         [ "emoji/ko" ]
kok =        [ "emoji/kok" ]
ku =         [ "emoji/ku" ]
ky =         [ "emoji/ky" ]
lb =         [ "emoji/lb" ]
lo =         [ "emoji/lo" ]
lt =         [ "emoji/lt" ]
lv =         [ "emoji/lv" ]
mai =        [ "emoji/mai" ]
mi =         [ "emoji/mi" ]
mk =         [ "emoji/mk" ]
ml =         [ "emoji/ml" ]
mn =         [ "emoji/mn" ]
mni =        [ "emoji/mni" ]
mr =         [ "emoji/mr" ]
ms =         [ "emoji/ms" ]
mt =         [ "emoji/mt" ]
my =         [ "emoji/my" ]
nb =         [ "emoji/nb" ]
ne =         [ "emoji/ne" ]
nl =         [ "emoji/nl" ]
nn =         [ "emoji/nn" ]
or =         [ "emoji/or" ]
pa =         [ "emoji/pa" ]
pa_Arab =    [ "emoji/pa_Arab" ]
pcm =        [ "emoji/pcm" ]
pl =         [ "emoji/pl" ]
ps =         [ "emoji/ps" ]
pt =         [ "emoji/pt" ]
pt_PT =      [ "emoji/pt_PT" ]
qu =         [ "emoji/qu" ]
rm =         [ "emoji/rm" ]
ro =         [ "emoji/ro" ]
root =       [ "emoji/root" ]
ru =         [ "emoji/ru" ]
rw =         [ "emoji/rw" ]
sa =         [ "emoji/sa" ]
sat =        [ "emoji/sat" ]
sd =         [ "emoji/sd" ]
si =         [ "emoji/si" ]
sk =         [ "emoji/sk" ]
sl =         [ "emoji/sl" ]
so =         [ "emoji/so" ]
sq =         [ "emoji/sq" ]
sr =         [ "emoji/sr" ]
sr_Cyrl =    [ "emoji/sr_Cyrl" ]
sr_Cyrl_BA = [ "emoji/sr_Cyrl_BA" ]
sr_Latn =    [ "emoji/sr_Latn" ]
sr_Latn_BA = [ "emoji/sr_Latn_BA" ]
su =         [ "emoji/su" ]
sv =         [ "emoji/sv" ]
sw =         [ "emoji/sw" ]
sw_KE =      [ "emoji/sw_KE" ]
ta =         [ "emoji/ta" ]
te =         [ "emoji/te" ]
tg =         [ "emoji/tg" ]
th =         [ "emoji/th" ]
ti =         [ "emoji/ti" ]
tk =         [ "emoji/tk" ]
to =         [ "emoji/to" ]
tr =         [ "emoji/tr" ]
tt =         [ "emoji/tt" ]
ug =         [ "emoji/ug" ]
uk =         [ "emoji/uk" ]
ur =         [ "emoji/ur" ]
uz =         [ "emoji/uz" ]
vi =         [ "emoji/vi" ]
wo =         [ "emoji/wo" ]
xh =         [ "emoji/xh" ]
yo =         [ "emoji/yo" ]
yo_BJ =      [ "emoji/yo_BJ" ]
yue =        [ "emoji/yue" ]
yue_Hans =   [ "emoji/yue_Hans" ]
zh =         [ "emoji/zh" ]
zh_Hant =    [ "emoji/zh_Hant" ]
zh_Hant_HK = [ "emoji/zh_Hant_HK" ]
zu =         [ "emoji/zu" ]
